// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button render correctly 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1o20tv1-Button{width:100%;background-color:#ecf0f1;color:#2c3e50;font-size:1em;-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-1o20tv1-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css 1o20tv1-Button"
  />,
  <button
    className="css-1o20tv1-Button"
    type="button"
  >
    sample Button
  </button>,
]
`;

exports[`button render correctly danger 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1ge2ywf-Button{width:100%;background-color:#e74c3c;color:#2c3e50;font-size:1em;-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-1ge2ywf-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#c0392b;}",
      }
    }
    data-emotion="css 1ge2ywf-Button"
  />,
  <button
    className="css-1ge2ywf-Button"
    type="button"
  >
    sample Button danger
  </button>,
]
`;

exports[`button render correctly loading 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1o20tv1-Button{width:100%;background-color:#ecf0f1;color:#2c3e50;font-size:1em;-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-1o20tv1-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css 1o20tv1-Button"
  />,
  <button
    className="css-1o20tv1-Button"
    type="button"
  >
    صبر کنید
  </button>,
]
`;

exports[`button render correctly secondary 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1d5avbz-Button{width:100%;background-color:#16a085;color:#2c3e50;font-size:1em;-webkit-text-decoration:none;text-decoration:none;padding:16px;border:2px;display:inline-block;position:relative;cursor:pointer;transition-duration:0.4s;}.css-1d5avbz-Button:hover{box-shadow:0 4px 16px rgba(0,1,31,0.2);background-color:#16a085;}",
      }
    }
    data-emotion="css 1d5avbz-Button"
  />,
  <button
    className="css-1d5avbz-Button"
    type="button"
  >
    sample Button secondary
  </button>,
]
`;
